--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,35 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.menu {
+    position: sticky;
+    top: 50px;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.menu img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
+}
+
 #bird {
     height: 44.5px;
     width: 60px;
     vertical-align: middle;
     margin-bottom: 5px;
+}
+
+#camera {
+    height: 55px;
+    width: 70px;
+}
+
+#resume {
+    height: 60px;
+    width: 50px;
 }
 
 ul {
