--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,9 @@
 body {
+    position: relative;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-}
-
-.menu {
-    position: sticky;
-    top: 50px;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-}
-
-.menu img {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 10px;
+    background: rgb(253, 238, 218);
 }
 
 #bird {
@@ -25,9 +13,18 @@ body {
     margin-bottom: 5px;
 }
 
+.menu {
+    position: fixed;
+    right: 0;
+}
+
+.menu img {
+    margin: 5px;
+}
+
 #camera {
     height: 55px;
-    width: 70px;
+    width: 77px;
 }
 
 #resume {
