--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ header {
 h1 {
     position: relative;
     color: #2a3233;
+    font-size: 45px;
 }
 
 h1::before {
@@ -50,7 +51,7 @@ h1::before {
     z-index: -1;
     top: 20px;
     left: 10px;
-    right: -5px;
+    right: -20px;
     bottom: 5px;
     background: #B7D1D1;
     filter: blur(5px);
@@ -82,13 +83,13 @@ li {
 }
 
 #camera {
-    height: 55px;
-    width: 77px;
+    height: 45px;
+    width: 57px;
 }
 
 #resume {
-    height: 60px;
-    width: 50px;
+    height: 50px;
+    width: 55px;
     margin-right: 11.5px;
 }
 
