--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+
 @media only screen and (max-width: 768px) { 
     .container {
       min-width: calc(100% - 20px); /* 10px on each side */
@@ -6,7 +8,6 @@
         display: none;
     }
     h1 {
-        margin: ;
     }
 }
 
@@ -21,7 +22,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background: #F9FEFF ;
+    background: #F0F0F0 ;
 }
 
 header {
@@ -29,7 +30,7 @@ header {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    margin-top: 6rem;
+    margin-top: 250px;
     min-width: calc(100% - 60px);
 }
 
@@ -41,8 +42,10 @@ header {
 
 h1 {
     position: relative;
-    color: #2a3233;
-    font-size: 45px;
+    color: #3F497F;
+    font-size: 35px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
 }
 
 h1::before {
@@ -51,14 +54,26 @@ h1::before {
     z-index: -1;
     top: 20px;
     left: 10px;
-    right: -20px;
+    right: 250px;
     bottom: 5px;
-    background: #B7D1D1;
+    background: #f5d184 ;
     filter: blur(5px);
+}
+
+p {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    color: #9b9592;
+    letter-spacing: 1px;
+    line-height: 1.5rem;
 }
 
 li {
     margin: 15px 0;
+    letter-spacing: 1px;
+    font-family: 'Ubuntu', sans-serif;
+    color: #3F497F;
 }
 
 #bird {
@@ -74,7 +89,8 @@ li {
     align-items: center;
     position: fixed;
     right: 0;
-    margin-right: 20px;
+    margin-right: 30px;
+    margin-top: -220px;
 }
 
 .menu img {
@@ -98,9 +114,46 @@ ul {
 }
 
 li img {
-    width: 16px; /* adjust to desired width */
-    height: 20px; /* adjust to desired height */
-    margin-right: 18px; /* add spacing between the image and list item text */
+    width: 16px;
+    height: 20px;
+    margin-right: 18px;
     vertical-align: middle;
     margin-bottom: 5px;
+}
+
+.eggs-list li {
+    opacity: 0;
+}
+
+@keyframes sequential-animation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.eggs-list li:nth-child(1) {
+    animation: sequential-animation 1s ease-out forwards;
+}
+
+.eggs-list li:nth-child(2) {
+    animation: sequential-animation 1s ease-out forwards 1s;
+}
+
+.eggs-list li:nth-child(3) {
+    animation: sequential-animation 1s ease-out forwards 2s;
+}
+
+.eggs-list li:nth-child(4) {
+    animation: sequential-animation 1s ease-out forwards 3s;
+}
+
+.eggs-list li:nth-child(5) {
+    animation: sequential-animation 1s ease-out forwards 4s;
+}
+
+.eggs-list li:nth-child(6) {
+    animation: sequential-animation 1s ease-out forwards 5s;
 }
