--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     }
 }
 
-@media screen and (max-width: 1490px) {
+@media screen and (max-width: 1095px) {
     .menu img {
         opacity: 0;
     }
@@ -38,6 +38,11 @@ header {
     height: 230px;
     width: 230px;
     border-radius: 30px;
+    transition: opacity 0.15s ease-out;
+}
+
+.tempAvatar.fade-out {
+    opacity: 0;
 }
 
 h1 {
