--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,19 @@ h6 {
 }
 
 .projImg {
-    height: 150px;
-    width: 150px;
+    height: 200px;
+    width: 210px;
 }
 
+.projectSect {
+    margin: 60px auto;
+}
+
+h2 {
+    color: #3F497F;
+    font-size: 25px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+    padding: 0 100px;
+    margin-bottom: 60px;
+}
