--- a/styles.css
+++ b/styles.css
@@ -206,11 +206,108 @@ h6 {
     margin: 60px auto;
 }
 
-h2 {
+.specialH1 {
     color: #3F497F;
     font-size: 25px;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 700;
     padding: 0 100px;
     margin-bottom: 60px;
+}
+
+.specialH1::before {
+    content: "";
+    display: none;
+}
+
+#aboutMe {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    min-width: calc(100% - 60px);
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+.aboutHeading {
+    margin: auto 80px;
+}
+
+.aboutHeading::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 20px;
+    left: 2vw;
+    right: 49vw;
+    bottom: 5px;
+    background: #f5d184 ;
+    filter: blur(5px);
+}
+
+.aboutParaWrap {
+    display: flex;
+    flex-direction: column;
+    margin: auto 130px;
+}
+
+.contactMe {
+    margin: auto 80px;
+}
+
+.contactMe::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 20px;
+    left: 2vw;
+    right: 49vw;
+    bottom: 5px;
+    background: #f5d184 ;
+    filter: blur(5px);
+}
+
+#arrow2 {
+    margin-top: 100px;
+    display: flex;
+    margin: 20px auto;
+    height: 50px;
+    width: 50px;
+    position: relative;
+    animation-name: arrow-move;
+    animation-duration: 2s;
+    animation-delay: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+.socials img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 40px;
+}
+
+.socialsWrapper {
+    display: flex;
+    flex-direction: column;
+    margin: auto 130px;
+    margin-left: 170px;
+}
+
+footer {
+    background-color: #f5d184;
+    text-align: center;
+    padding: 20px;
+    color: #3F497F;
+    font-size: 15px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+}
+
+#heart {
+    height: 20px;
+    width: 25px;
+    vertical-align: middle;
+    margin-bottom: 5px;
 }
