--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     .menu img {
         display: none;
     }
-    
+
     header {
         margin-top: 60px;
         margin-bottom: 150px;
@@ -278,7 +278,7 @@ h6 {
     left: 130px;
     right: 130px;
     bottom: 5px;
-    background: #f1ddc2 ;
+    background: #bfe8f9 ;
     filter: blur(30px);
 }
 
