--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,14 @@ body {
     background: #F0F0F0 ;
 }
 
+.hoverHere2 {
+    height: 50px;
+    width: 65px;
+    position: absolute;
+    margin-left: 400px;
+    margin-top: 180px;
+}
+
 header {
     display: flex;
     height: 90vh;
