--- a/styles.css
+++ b/styles.css
@@ -74,14 +74,14 @@ body {
 
 .hoverHere2 {
     height: 50px;
-    width: 65px;
+    width: 75px;
     position: absolute;
-    margin-left: 400px;
-    margin-top: 180px;
+    margin-left: -80px;
+    margin-top: 230px;
     opacity: 0;
     animation-name: fadeIn;
-    animation-duration: 1s;
-    animation-delay: 5s;
+    animation-duration: 2s;
+    animation-delay: 9s;
     animation-fill-mode: forwards;
 }
 
@@ -140,10 +140,6 @@ p {
     line-height: 1.5rem;
 }
 
-/* li:hover {
-    transform: scale(1.05);
-} */
-
 ul {
     list-style-type: none;
 }
@@ -161,7 +157,8 @@ li img {
     margin: 15px 0;
     letter-spacing: 1px;
     font-family: 'Ubuntu', sans-serif;
-    color: #3F497F;
+    color: #5a5a5a;
+    font-size: 15px;
 }
 
 @keyframes sequential-animation {
@@ -174,23 +171,23 @@ li img {
 }
 
 .eggs-list li:nth-child(1) {
-    animation: sequential-animation 1s ease-out forwards;
+    animation: sequential-animation 1s ease-out forwards 4s;
 }
 
 .eggs-list li:nth-child(2) {
-    animation: sequential-animation 1s ease-out forwards 1s;
+    animation: sequential-animation 1s ease-out forwards 5s;
 }
 
 .eggs-list li:nth-child(3) {
-    animation: sequential-animation 1s ease-out forwards 2s;
+    animation: sequential-animation 1s ease-out forwards 6s;
 }
 
 .eggs-list li:nth-child(4) {
-    animation: sequential-animation 1s ease-out forwards 3s;
+    animation: sequential-animation 1s ease-out forwards 7s;
 }
 
 .eggs-list li:nth-child(5) {
-    animation: sequential-animation 1s ease-out forwards 4s;
+    animation: sequential-animation 1s ease-out forwards 8s;
 }
 
 #bird {
@@ -228,8 +225,13 @@ li img {
 h6 {
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
-    color: #3F497F;
+    color: #F0F0F0;
     font-size: 12px;
+    margin-top: 6px;
+}
+
+.avatarTextRow2 {
+    margin-top: -20px;
 }
 
 #arrow {
@@ -322,7 +324,7 @@ h6 {
     z-index: -1;
     top: 20px;
     bottom: 15px;
-    background: #aceed0 ;
+    background: #99cdc6 ;
     filter: blur(30px);
 }
 
