--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,7 @@ li img {
 h6 {
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
-    color: #F0F0F0;
+    color: rgb(237, 230, 222);
     font-size: 12px;
     margin-top: 6px;
 }
