--- a/styles.css
+++ b/styles.css
@@ -233,6 +233,10 @@ h6 {
     margin-top: 6px;
 }
 
+#avatar {
+    padding-top: 50px;
+}
+
 .avatarTextRow2 {
     margin-top: -20px;
 }
@@ -243,6 +247,7 @@ h6 {
     margin-top: 0px;
     height: 50px;
     width: 50px;
+    padding-top: 50px;
     position: relative;
     animation-name: arrow-move;
     animation-duration: 2s;
