Limit header max width

--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,7 @@ header {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    max-width: 1100px;
 }
 
 .tempAvatar {
@@ -376,7 +377,7 @@ h6 {
     left: 20px;
     right: 25px;
     bottom: 5px;
-    background: #f5d184 ;
+    background: #f5e3bc ;
     filter: blur(5px);
 }
 
@@ -440,6 +441,8 @@ a:active {
 
 .contactHeading {
     width: 300px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .contactHeading::before {
