Add Dashboard to projects

--- a/styles.css
+++ b/styles.css
@@ -464,7 +464,7 @@ a:active {
     justify-content: center;
     margin: auto;
     padding: 50px 0;
-    background-color: #b298aa;
+    background-color: #d3bdcd;
 }
 
 #resume2 {
